# my_robot_py_sim

./: .gitignore  FILE_STRUCTURE_4FLOWS.md  README.md  README_zh.md  package.xml  setup.py
OrbbecSDK_ROS2/: README_CN.MD
OrbbecSDK_ROS2/orbbec_camera/launch/: gemini2L.launch.py  gemini435_le.launch.py
OrbbecSDK_ROS2/orbbec_camera/src/: ob_camera_node.cpp
config/: nav2_footprint.yaml  nav2_navigation.yaml  real_nav2_navigation.yaml  real_nav2_no_odom.yaml  real_nav2_no_odom_mppi.yaml  real_nav2_no_odom_omni.yaml  routes.yaml  safety_shell.yaml
launch/: gazebo_world.launch.py  localization_with_rviz.launch.py  navigation_with_rviz.launch.py  real_navigation_no_odom_mppi_with_rviz.launch.py  real_navigation_no_odom_omni_with_rviz.launch.py  real_navigation_no_odom_with_rviz.launch.py  real_navigation_with_rviz.launch.py  sim_with_rviz.launch.py  view_robot.launch.py
legacy/: README.md
legacy/my_robot_py_sim/: README.md
legacy/my_robot_py_sim/config/: amcl.yaml  nav2_navigation.yaml  nav2_navigation_25d.yaml  nav2_route.yaml  real_nav2_navigation.yaml  real_nav2_no_odom_mppi.yaml  real_nav2_no_odom_omni.yaml  slam_toolbox.yaml
legacy/my_robot_py_sim/launch/: real_navigation_no_odom_mppi_with_rviz.launch.py  real_navigation_no_odom_omni_with_rviz.launch.py  real_navigation_no_odom_with_rviz.launch.py  real_navigation_with_rviz.launch.py  sim_with_rviz.launch.py
legacy/my_robot_py_sim/my_robot_py_sim/: footprint_marker.py  grid_to_pointcloud.py  planning_map_fusion.py  route_cli.py  route_manager.py  route_recorder.py  safety_forbidden_grid.py  safety_shell_marker.py  sdk_pose_to_map_odom_tf.py
legacy/my_robot_py_sim/worlds/: door_world.sdf
livox_ros_driver2/: CMakeLists.txt
livox_ros_driver2/config/: MID360s_config.json
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: local_server_rviz.launch.py  real_navigation_latest_pose_relay.launch.py  real_navigation_mppi.launch.py  real_navigation_mppi_hybrid_distance.launch.py  sim_navigation.launch.py  view_robot.launch.py
my_robot_bringup/rviz/: hybrid_obstacle_test.rviz  local_server_navigation.rviz
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/rviz/: view_robot.rviz
my_robot_localization/: package.xml  setup.py
my_robot_localization/my_robot_localization/: gazebo_pose_odom.py  latest_sdk_sample_relay.py  odom_to_tf.py  sdk_pose_to_map_tf.py
my_robot_maps/: CMakeLists.txt  package.xml
my_robot_maps/maps/Test052601/: Test052601.feature.json  Test052601.json  Test052601.yaml  Test052601.yaml.lxmap
my_robot_maps/maps/Test052601_keepout/: Test052601_keepout.pgm  Test052601_keepout.yaml
my_robot_maps/maps/Test052601_original_backup/: Test052601_original.pgm  Test052601_original.yaml
my_robot_navigation/: CMakeLists.txt  package.xml
my_robot_navigation/behavior_trees/: navigate_fine_omni_replanning_if_path_invalid.xml  navigate_forward_only_replanning_if_path_invalid.xml  navigate_long_forward_replanning_if_path_invalid.xml  navigate_short_omni_replanning_if_path_invalid.xml
my_robot_navigation/config/: nav2_footprint.yaml  real_amcl.yaml  real_nav2_no_odom_mppi.yaml  real_nav2_no_odom_mppi_hybrid_distance.yaml  real_nav2_no_odom_mppi_pure.yaml  routes.yaml
my_robot_navigation/scripts/: record_nav_diagnostics.sh  record_vmr_timing_bag.sh
my_robot_perception/: package.xml  setup.py
my_robot_perception/config/: bytetrack_person.yaml  rgbd_goal_finder.yaml
my_robot_perception/my_robot_perception/: full_body_clearance_checker.py  pointcloud_restamper.py  rgbd_goal_finder.py  safety_forbidden_grid.py  static_25d_forbidden_grid.py
my_robot_py_sim/: README.md  odom_to_tf.py  planning_map_fusion.py  route_cli.py  route_manager.py  route_player.py  route_utils.py  safety_forbidden_grid.py  safety_shell_marker.py  setup.cfg  setup.py  static_25d_forbidden_grid.py
my_robot_py_sim/config/: real_nav2_no_odom.yaml  real_nav2_no_odom_mppi.yaml  route_graph.geojson
my_robot_py_sim/launch/: localization_with_rviz.launch.py  navigation_25d_with_rviz.launch.py  navigation_with_rviz.launch.py  real_base_test.launch.py  real_navigation_no_odom_mppi_with_rviz.launch.py
my_robot_py_sim/my_robot_py_sim/: route_insert_editor.py
my_robot_py_sim/rviz/: view_robot.rviz
my_robot_py_sim/urdf/: mobile_manipulator.urdf
my_robot_table_viewpoint/: README.md  package.xml  setup.cfg  setup.py
my_robot_table_viewpoint/config/: hybrid_table_viewpoint.yaml  table_viewpoint.yaml
my_robot_table_viewpoint/launch/: hybrid_local_obstacle_test.launch.py  hybrid_table_server.launch.py  hybrid_table_viewpoint.launch.py  sam3_table_bbox.launch.py  sam3_table_navigation.launch.py  sam_table_bbox.launch.py  table_navigation.launch.py  table_viewpoint.launch.py
my_robot_table_viewpoint/my_robot_table_viewpoint/: hybrid_viewpoint_orchestrator.py  sam3_table_bbox_node.py  sam_table_bbox_node.py  table_viewpoint_planner.py
my_robot_table_viewpoint/rviz/: table_viewpoint.rviz
my_robot_tools/: package.xml  setup.cfg  setup.py
my_robot_tools/my_robot_tools/: route_cli.py  route_commander.py  route_insert_editor.py  route_manager.py  route_recorder.py  route_utils.py  safety_shell_marker.py
my_robot_yolo_follow/: CMakeLists.txt  README.md  package.xml
my_robot_yolo_follow/launch/: yolo_rgbd_navigation.launch.py
pose_estimator/: package.xml  setup.py
pose_estimator/config/: pose_estimator.yaml
pose_estimator/launch/: pose_estimator.launch.py
pose_estimator/pose_estimator/: pose_estimator_node.py
rviz/: view_robot.rviz
urdf/: mobile_manipulator.urdf
vmr_base_bridge/: CMakeLists.txt  README.md
vmr_base_bridge/config/: vmr_base_bridge.yaml  vmr_sdk.ini
vmr_base_bridge/include/: VmrSDKApi.h
vmr_base_bridge/include/vmr_base_bridge/: vmr_base_bridge.hpp
vmr_base_bridge/msg/: VmrTimingDiagnostic.msg
vmr_base_bridge/scripts/: right_triangle_trajectory.py  static_map_publisher.py  task_mode_probe.py
vmr_base_bridge/src/: vmr_base_bridge.cpp
vmr_base_bridge/srv/: QueryTaskStatus.srv  VectorMove.srv
worlds/: door_world.sdf
(+8 files in other folders)
