<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Launch entry points for robot bringup, simulation, and navigation.</description>
  <maintainer email="jensen@todo.todo">jensen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_robot_maps</exec_depend>
  <exec_depend>my_robot_navigation</exec_depend>
  <exec_depend>my_robot_py_sim</exec_depend>
  <exec_depend>vmr_base_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
