<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Launch entry points for robot bringup, simulation, and navigation.</description>
  <maintainer email="jensen@todo.todo">jensen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_robot_localization</exec_depend>
  <exec_depend>my_robot_maps</exec_depend>
  <exec_depend>my_robot_navigation</exec_depend>
  <exec_depend>my_robot_perception</exec_depend>
  <exec_depend>my_robot_tools</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_rviz_plugins</exec_depend>
  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vmr_base_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
