<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_navigation</name>
  <version>0.0.0</version>
  <description>Navigation, route, and safety configuration for the robot.</description>
  <maintainer email="jensen@todo.todo">jensen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_mppi_controller</exec_depend>
  <exec_depend>nav2_route</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
