<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_yolo_follow</name>
  <version>0.1.0</version>
  <description>YOLO RGB-D target following launch entry points.</description>
  <maintainer email="jensen@todo.todo">jensen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>my_robot_bringup</exec_depend>
  <exec_depend>my_robot_maps</exec_depend>
  <exec_depend>my_robot_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
